[tool.poetry]
name = "deepdreamer"
version = "0.1.0"
description = ""
authors = ["Nicholas Lai Jin Yung <nicklai88@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
transformers = "^4.48.2"
gymnasium = {extras = ["box2d", "classic-control"], version = "^1.0.0"}
tensorboard = "^2.18.0"
swig = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
