[tool.poetry]
name = "deepdreamer"
version = "0.1.0"
description = ""
authors = ["Nicholas Lai Jin Yung <nicklai.jy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.7.1"
transformers = "^4.52.4"
tensorboard = "^2.19.0"
datasets = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
